Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1,3 +1,9 @@
+/*	===============================
+	Bootstrap import
+	=============================== */
+@import "@{templateCommon}/basekit-bootstrap.less";
+
+
 body {
     background-color: @color-swatch2;
     background-image: image('/images/bg.png');
@@ -437,6 +443,7 @@ header .box {
     display: block;
     float: left;
     padding: 0;
+    width: 25%;
 }
 
 /* COMPANY NAME */
@@ -536,7 +543,7 @@ footer h2 {
 .widget.extendednavigation {
     float: right;
     position: relative;
-    max-width: 691px;
+    width: 75%;
 }
 
 .widget.extendednavigation a.pull {
@@ -544,7 +551,6 @@ footer h2 {
 }
 
 .widget.extendednavigation ul {
-    float: left;
     margin: 0;
     padding: 0;
 }
